plugins {
    id 'java'
}

group 'com.notaneye.learn'
version '1.0-SNAPSHOT'

java {
    // Set our compatibility version
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
    withJavadocJar()
    withSourcesJar()
}

// Enable preview features
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
}
